--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -66,7 +66,7 @@
 					<input type="text" placeholder="Pseudo" name="username" class="Form__entry Input__text Input__text--rounded">
 					<input type="password" placeholder="Mot de passe" name="password" class="Form__entry Input__text Input__text--rounded">
 					<div class="Form__entry">
-						<a href="#" class="Login__lost">Vous avez perdu votre mot de passe ?</a>
+						<a href="/forgot" class="Login__lost">Vous avez perdu votre mot de passe ?</a>
 					</div>
 					<input type="submit" value="Connexion" class="Login__entry Input__submit Input__submit--rounded">
 				</form>
