--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -226,6 +226,7 @@ input, button, textarea {
   top: 80px;
   right: 20px;
   width: 400px;
+  z-index: 9;
 }
 .Error {
   background-color: #d25a5a;
@@ -896,7 +897,20 @@ textarea.User__biography:focus {
  * Chat
  *
  */
- .Chat__toggle {
+
+ .Match__Item {
+  position: relative;
+}
+.Match__Item--unread::after {
+  content: '\f111';
+  font-family: fontawesome;
+  color: #d25a5a;
+  position: absolute;
+  right: 10px;
+  top: 12px;
+  font-size: 10px;
+}
+.Chat__toggle {
   padding: 10px;
   display: block;
   font-size: 12px;
