--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
 						</ul>
 					</div>
 					<div class="Menu__arrow"></div>
-					<a href="#" class="Header__link Header__link--shrinked Menu__toggle js-prevent"><i class="fa fa-bell"></i></a>
+					<a href="#" class="Header__link Notifications__toggle Header__link--shrinked Menu__toggle js-prevent"><i class="fa fa-bell"></i></a>
 				</li>
 				<li class='Header__item'>
 					<div class='Menu Menu--has-arrow'>
