--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title><%= locals.title %></title>
-</head>
-<body>
-	<form method="post"></form>
+<% include ./partials/header %>
+	<form id="forgot" method="post" style="margin-top: 120px;">
+		<input type="text" name="username" id="" placeholder="username">
+		<input type="submit" value="go">
+	</form>
+	<script>
+		$('#forgot').on('submit', function(e) {
+			var fdata = $(this).serialize();
+			e.preventDefault();
+			$.ajax({
+				url:'/forgot',
+				method: "POST",
+				data: fdata,
+				success: function() {
+					alert('go check your mails')
+				},
+				error: function(err) {
+					alert(err.responseJSON.error)
+				}
+			})
+		})
+	</script>
 </body>
 </html>
